# Imtiaz_Mart_Project

./: compose.yaml
authentication_service/: .env  Dockerfile.dev  pyproject.toml
authentication_service/app/: main.py  settings.py  utils.py
microservice_02/app/: main.py
order_service/app/: main.py
payment-service/: pyproject.toml
product_service/: .env  env_backup
product_service/app/: main.py
product_service/app/models/: product_models.py
todo/app/: main.py
user_service/: .env  Dockerfile.dev  pyproject.toml
user_service/app/: main.py
user_service/models/: user_models.py
